Fixed the mobile version for page 1

--- a/page1.html
+++ b/page1.html
@@ -139,7 +139,7 @@
                 <p>It is to build a company that he or she can one day sell, continue to scale, or own passively.</p>
             </div>
 
-            <div class="image-pop after-pop"> <!-- classes => image-pop after-pop -->
+            <div class="image-pop after-pop">
                 <img src="./assets/img/page1/Scaling Guide (1)/Group.png" alt="">
             </div>
         </div>
