--- a/page5.html
+++ b/page5.html
@@ -36,7 +36,145 @@
         </div>
 
     </header>
+
+    <section id="day5Development">
+        <div class="container">
+            <div class="title-row">
+                <h3>Day 5:</h3>
+                <h2>Develop Your Core Pillars</h2>
+            </div>
+
+            <p style="margin-bottom:1.5rem;">At its core, every business has five functional areas that carry the load and provide a stable base upon which to scale and grow: Sales/Marketing, Operations, Finance, Team, and Executive Leadership.</p>
+
+            <div class="col">
+
+                <div class="level-box">
+                    <h3>pillar One:</h3>
+                    <h3 class="blue-highlight">Sales/Marketing</h3>
+                    <div class="content">
+                        <p>No leads, no sales. No sales, no business. It’s that simple. The Sales/Marketing pillar finds clients, makes sales, and generates revenue. It’s the part of your business that makes it rain cash.</p>
+                        <p>Sales is everything you do to make your offers as effective as possible and to close selling opportunities. Your offers can be delivered in a variety of ways—from trained sales reps in a call center, to a sales force in the field, to direct response sales letters or print ads, to interactive websites, to retail locations. Marketing is everything you do to get one of your offers in front of the right prospective buyers under the best possible conditions. Marketing crafts your company’s identity and positions it in the hearts and minds of your marketplace so you consistently generate the volume of sales leads you need. You want leads that are primed and ready for your selling systems to convert into thrilled clients or repurchasers. Too many entrepreneurs focus on this pillar only because they have to, not because they want to. They feel intimidated by the idea of selling. But understand this: When your business is in Early and Middle Stage Level Two, it’s crucial for you as the company founder to focus a majority of your energy on generating profitable sales. If you don’t, your new business won’t survive, let alone thrive. Only as you grow your business can you relieve yourself of the responsibilities of this pillar. In the early days of your business, you focus on making sure sales happen, which means meeting with clients and closing deals yourself. Later, however, you must shift your focus to creating repeatable and scalable sales and marketing systems that don’t depend on your involvement.</p>
+                    </div>
+                    <div class="content-2">
+                        <h3>THE SIX KEY RESPONSIBILITIES<br>OF YOUR SALES/MARKETING PILLAR</h3>
+                        <ol>
+                            <li>Defining your target market and knowing what it really wants </li>
+                            <li>Clarifying your offer(s) and creating sales collateral</li>
+                            <li>Lead generation and lead management </li>
+                            <li>Lead conversion and sales system </li>
+                            <li>Sales and marketing strategy and planning</li>
+                            <li>Branding and positioning</li>
+                        </ol>
+                    </div>
+                </div>
+
+                <div class="level-box">
+                    <h3>pillar TWO:</h3>
+                    <h3 class="blue-highlight">Operations</h3>
+                    <div class="content">
+                        <p>Your Operations pillar is the part of your business that creates the products or delivers the services your business offers, fulfilling on the promises made by Sales/Marketing. Your Operations pillar also performs the general and administrative back-end functions of your business. No company will thrive without having a well-organized, strong Operations pillar. Sure, you can generate sales, but unless you’re able to fulfill on the promises you’ve made, your business won’t last. As crazy as it may sound, there are many cases of businesses that were killed by success. Their front-end sales/marketing pillar was so successful that their back-end operations pillar couldn’t keep pace. This caused an extreme disconnect between the promises these companies made their customers and the execution in fulfilling those promises. The results were predictable—angry customers and enough bad press to put these companies six feet underground. A very visible example of this was the online retailer eToys.com. They had a great marketing program and sold thousands of toys for the 2000 holiday season. But their operations department was less than a well-oiled machine, and many families got their holiday presents delivered in January, after Christmas. The company’s lack of operational efficiency led to bad press, many lawsuits, and ultimately the death of the company.
+                        </p>
+                    </div>
+                    <div class="content-2">
+                        <h3>THE SIX KEY RESPONSIBILITIES <br> OF YOUR OPERATIONS PILLAR </h3>
+                        <ol>
+                            <li>General administration </li>
+                            <li>Key company infrastructure (e.g., facilities, equipment, websites, etc.)</li>
+                            <li>Production and quality control </li>
+                            <li>Fulfillment and delivery </li>
+                            <li>Customer service </li>
+                            <li>Purchasing/cost controls</li>
+                        </ol>
+                    </div>
+                </div>
+
+                <div class="level-box">
+                    <h3>pillar THREE:</h3>
+                    <h3 class="blue-highlight">Finance</h3>
+                    <div class="content">
+                        <p>The Finance pillar of your business encompasses all the essential functions of collecting, tracking, distributing, and reporting the flow of money in and out of your business. It includes your billing procedures, collection practices, and accounts payable processes. It also includes all financial reporting from balance sheets to profit and loss statements, and the managing of cash flow. As your business matures, it will also include the management of risk, the sourcing of capital, and the forecasting to help your management team make better business decisions.</p>
+                    </div>
+                    <div class="content-2">
+                        <h3>THE SIX KEY RESPONSIBILITIES <br> OF YOUR FINANCE PILLAR
+                        </h3>
+                        <ol>
+                            <li>Bookkeeping and financial reporting </li>
+                            <li>Collections (AR) </li>
+                            <li>Bill paying (AP)</li>
+                            <li>Budgeting, planning, risk management</li>
+                            <li>Cash flow management </li>
+                            <li>Tax planning/filing</li>
+                        </ol>
+                    </div>
+                </div>
+
+                <div class="level-box">
+                    <h3>pillar FOUR:</h3>
+                    <h3 class="blue-highlight">Team</h3>
+                    <div class="content">
+                        <p>Your Team pillar establishes how you hire, orient, train, assess, compensate, and if necessary, let go of, your staff. It deals with your policies and procedures for team members and the legal requirements of working with employees. To grow most businesses, you’ll need talented team members to both spark and support that growth. Whether it’s adding sales team members to increase sales, engineers to design products, or accounting staff to keep track of the money, your company’s greatest source of leverage is its ability to attract, hire, integrate, and empower talented, committed people to play on your team. Scaling your company and growing your freedom depends on your ability to find, hire, and retain talented people to help you build the systems and controls your business needs to scale.</p>
+                    </div>
+                    <div class="content-2">
+                        <h3>THE SIX KEY RESPONSIBILITIES <br> OF YOUR TEAM PILLAR 
+                        </h3>
+                        <ol>
+                            <li>Hiring and new team-member orientation </li>
+                            <li>Regular staff evaluation, coaching, and training </li>
+                            <li>Compensation and benefits administration </li>
+                            <li>Compliance procedures for all applicable labor laws </li>
+                            <li>Troubleshooting and personality challenges </li>
+                            <li>Exit process for both friendly partings and expedited exits (firings)</li>
+                        </ol>
+                    </div>
+                </div>
+
+                <div class="level-box">
+                    <h3>pillar FIVE:</h3>
+                    <h3 class="blue-highlight">Executive Leadership</h3>
+                    <div class="content">
+                        <p>The final pillar of your business is Executive Leadership—the area that leads your leaders and sets the big-picture direction for your company. It’s also likely the final area for you to personally let go of. Remember, many Level Three business owners choose to stay in their businesses as CEOs and continue working. The key distinction is that this is a choice, not a requirement for their companies’ survival. Successful business owners groom their successors and ready their organizations to successfully transition leadership when the time is right. They intentionally nurture the culture that helps their team successfully operate the business even when the founder is not there in the room. On a macro level, your job as leader is establishing what your business stands for and how it sees itself; that is, where it focuses its resources and what its key goals and priorities are, and the values through which it makes its daily decisions. Leaders create the narrative through which all stakeholders interpret the business and their relationship to it. As you grow your business, it becomes increasingly important that you shape the stories and traditions that will become part of your company’s heritage. These hold your business on course even when you’re no longer present each day to drive it. On a micro level, you want to create a business in which all team members understand their roles, know what they’re responsible for, how success in their role will be measured, and how leaders and team members will provide feedback as they go. Your most important role as a leader is building a workplace where the most talented people want to come to work and stay. When people who could work anywhere want to work for you, that’s when you know you got it right.</p>
+                    </div>
+                    <div class="content-2">
+                        <h3>THE FOUR KEY RESPONSIBILITIES OF YOUR EXECUTIVE LEADERSHIP PILLAR </h3>
+                        <ol>
+                            <li>Strategic planning (company as a whole) </li>
+                            <li>Leadership development/continuity planning </li>
+                            <li>Company culture and traditions</li>
+                            <li>Communication company-wide</li>
+                        </ol>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section id="page5After1">
+        <div class="container">
+            <div class="row-2x">
+                <div class="col col-end">
+                    <p>It’s time to map your baseline of precisely where your company currently stands in each of the five pillars. The Five-Pillar Audit tool below will give you a quantitative breakdown of how your business is doing. Take five minutes and complete it now. </p>
+                </div>
+                <div class="col image-container">
+                    <img src="./assets/img/page5/row1.png" >
+                </div>
+            </div>
+        </div>
+    </section>
     
+    <section id="page5After2">
+        <div class="container">
+            <div class="col">
+                <p>If you have an Early or Middle Stage Level Two business, chances are your scores are currently quite low in three or more pillars. This is normal. You’ll improve these scores rapidly when you follow the Level Three Road Map to progress your business. The two most important pillars at these stages are your Sales/ Marketing pillar and your Operations pillar. If either scored below a 20 (out of a possible 60 for each area), then you have concentrated work ahead to improve these two critical pillars. At this time in your business, if you score low in reliably generating leads, closing on sales, fulfilling on your client promises, and collecting on what you are owed, you need to immediately remedy that situation. These functions are the minimum requirements to have a sustainable business. Remember, basic survival is the first hurdle to get to Level Three. If you own an Advanced Stage Level Two or Level Three business, chances are your scores in most pillars are high (above 40 for each pillar). Look for any specific pillar in which your score was below 20. This area of your business needs immediate attention. We encourage you to repeat this Five-Pillar Audit each quarter. Make sure to date and save your scores so you can note your progress over time. This tool is a simple, structured way to know where and how your business is progressing, and determine where it needs more of your attention.</p>
+            </div>
+
+            <div class="blue-box">
+                <p>Now it’s time to go back to your business—pillar by pillar— and look for ways to refine each core pillar to create and sustain rapid growth.</p>
+                <p>Share some specific from each pillar but leave the bulk for another freebie i.e. The Five Pillar Production Packet</p>
+            </div>
+        </div>
+    </section>
+
     <section id="stepsBlock">
         <div class="container">
             <div class="block-pop">
